@startuml
'https://plantuml.com/class-diagram
class VoltageAdapter{
output5V():int
}

class Phone {
charging():void
}
class Client

class Voltage220V{
output220V():int
}

interface IVoltage5V{
output5V():int
}
Voltage220V <|-- VoltageAdapter
IVoltage5V <|.. VoltageAdapter
Phone ..> IVoltage5V
Client ..> Phone
Client ..> VoltageAdapter

@enduml